--- a/03-SummaryStats.Rmd
+++ b/03-SummaryStats.Rmd
@@ -247,8 +247,9 @@ library(readxl)  # load the library
 
 
 # Notice that if you installed the R package of this book,
-# you have the data file installed at 
-# `system.file(package="ScPoEconometrics","datasets","demo_gind.xls")`
+# you have the .xls data file already at 
+# `system.file(package="ScPoEconometrics",
+#                        "datasets","demo_gind.xls")`
 # otherwise:
 # * download the file to your computer
 # * change the argument `path` to where you downloaded it
@@ -256,36 +257,39 @@ library(readxl)  # load the library
 # or in RStudio by clicking Session > Set Working Directory
 
 # total population in raw format
-tot_pop_raw = read_excel(path = system.file(package="ScPoEconometrics","datasets","demo_gind.xls"), 
+tot_pop_raw = read_excel(
+                path = system.file(package="ScPoEconometrics",
+                                    "datasets","demo_gind.xls"), 
                 sheet="Data", # which sheet
                 range="A9:K68")  # which excel cell range to read
 names(tot_pop_raw)[1] <- "Country"   # lets rename the first column
 tot_pop_raw
 ```
 
-This shows a `tibble`. This is more informative view of a `data.frame` (it tells us data type, and how many cols and rows). Notice, in particular, that *all* columns seem to be of type `chr`, i.e. characters - a string, not a number! We'll have to fix that, as this is clearly numeric data.
+This shows a `tibble`. This is more informative view of a `data.frame` (it tells us data type, and how many cols and rows). The column names are `Country,2008,2009,...`, and the rows are numbered `1,2,3,...`. Notice, in particular, that *all* columns seem to be of type `<chr>`, i.e. characters - a string, not a number! We'll have to fix that, as this is clearly numeric data.
 
 #### `tidyr`
 
 In the previous `tibble`, each year is a column name (like `2008`) instead of all years being in one column `year`. We really would like to have several rows for each Country, one per year. We want to `gather()` all years into a new column to tidy this up - and here is how:
 
 1. specify which columns are to be gathered: in our case, all years (note that `paste(2008:2017)` produces a vector like `["2008", "2009", "2010",...]`)
-1. say what those columns should be gathered into, i.e. what is the *key* for those values: `year`.
-1. Finally, what is the name of the new resulting column, containing the *value* from each cell: `counts`.
+1. say what those columns should be gathered into, i.e. what is the *key* for those values: we'll call it `year`.
+1. Finally, what is the name of the new resulting column, containing the *value* from each cell: let's call it `counts`.
 
 ```{r gather,warning=FALSE}
 library(tidyr)   # for the gather function
 tot_pop = gather(tot_pop_raw, paste(2008:2017),key="year", value = "counts")
+tot_pop
 ```
 
-Notice that `counts` is still a `chr`. Let's convert it:
+That's better! However, `counts` is still `chr`! Let's convert it to a number:
 
 ```{r convert}
 tot_pop$counts = as.integer(tot_pop$counts)
 tot_pop
 ```
 
-Now you can see that column `counts` is indeed a `int`, i.e. an integer number, and we are fine.
+Now you can see that column `counts` is indeed `int`, i.e. an integer number, and we are fine.
 
 #### `dplyr`
 
@@ -310,9 +314,9 @@ Now we can immediately select some countries and plot their population over time
 ```{r gather-plot,warning=FALSE,message=FALSE}
 library(dplyr)  # for %>%, filter, mutate, ...
 tot_pop %>%
-  filter(Country %in% c("France","United Kingdom","Italy","Germany")) %>%
+  filter(Country %in% c("France","United Kingdom","Italy")) %>%
   mutate(millions = counts / 1e6) %>%
-  ggplot(mapping = aes(x=year,y=millions,color=Country,group=Country)) + geom_line()
+  ggplot(mapping = aes(x=year,y=millions,color=Country,group=Country)) + geom_line(size=1)
 ```
 
 #### Arrange a `tibble` {-} 
@@ -327,7 +331,9 @@ top5 = tot_pop %>%
 bottom5 = tot_pop %>%
   arrange(desc(counts)) %>%
   top_n(-5)
+# let's see top 5
 top5
+# and bottom 5
 bottom5
 ```
 
@@ -360,16 +366,113 @@ missings = tot_pop %>%
   filter(is.na(counts)) %>% # is.na(x) returns TRUE if x is NA
   group_by(Country) %>%
   summarise(n_missing = n(),years = paste(year,collapse = ", "))
-knitr:::kable(missings)
+knitr:::kable(missings)  # knitr:::kable makes a nice table
 ```
 
-Notice that I used the function `kable` from the `knitr` package to produce a nicely looking table here.
+
+#### Males and Females {-} 
+
+Let's look at the numbers by male and female population. They are in the same xls file, but at different cell ranges. Also, I just realised that the special character `:` indicates *missing* data. We can feed that to `read_excel` and that will spare us the need to convert data types afterwards. Let's see:
+
+```{r females}
+females_raw = read_excel(
+                path = system.file(package="ScPoEconometrics",
+                                    "datasets","demo_gind.xls"), 
+                sheet="Data", # which sheet
+                range="A141:K200",  # which excel cell range to read
+                na=":" )   # missing data indicator
+names(females_raw)[1] <- "Country"   # lets rename the first column
+females_raw
+```
+
+You can see that `R` now correctly read the numbers as such, after we told it that the `:` character has the special *missing* meaning: before, it *coerced* the entire `2008` column (for example) to be of type `chr` after it hit the first `:`. We had to manually convert the column back to `numeric`, in the process automatically coercing the `:`s into `NA`. Now we addressed that issue directly. Let's also get the male data in the same way:
+
+```{r males}
+males_raw = read_excel(
+                path = system.file(package="ScPoEconometrics",
+                                    "datasets","demo_gind.xls"), 
+                sheet="Data", # which sheet
+                range="A75:K134",  # which excel cell range to read
+                na=":" )   # missing data indicator
+names(males_raw)[1] <- "Country"   # lets rename the first column
+```
+
+Next step was to `tidy` up this data, just as before:
+
+```{r tidymales}
+females = gather(females_raw, paste(2008:2017),key="year", value = "counts")
+males = gather(males_raw, paste(2008:2017),key="year", value = "counts")
+```
+
+Let's try to tweak our above plot to show the same data in two separate panels: one for males and one for females. This is easiest to do with `ggplot` if we have all the data in one single `data.frame` (or `tibble`), and marked with a *group identifier*. Let's first add this to both datasets, and then let's just combine both into one:
+
+```{r}
+females$sex = "female"
+males$sex = "male"
+sexes = rbind(males,females)   # "row bind" 2 data.frames
+sexes
+```
+
+Now that we have all the data nice and `tidy` in a `data.frame`, this is a very small change to our previous plotting code:
+
+```{r psexes}
+sexes %>%
+  filter(Country %in% c("France","United Kingdom","Italy")) %>%
+  mutate(millions = counts / 1e6) %>%
+  ggplot(mapping = aes(x=as.Date(year,format="%Y"),  # convert to `Date`
+                       y=millions,colour=Country,group=Country)) + 
+      geom_line() +
+  scale_x_date(name = "year") + # rename x axis
+  facet_wrap(~sex)   # make two panels, splitting by groups `sex`
+```
+
+#### Always Compare to Germany :-) {-}
+
+How do our three countries compare with respect to the biggest country in the EU in terms of population? What *fraction* of Germany does the French population make in any given year, for example?
+
+```{r}
+# remember that the pipe operator %>% takes the 
+# result of the previous operation and passes it
+# as the *first* argument to the next function call
+merge_GER <- tot_pop %>%
+  # 1. subset to countries of interest
+  filter(
+    Country %in% 
+      c("France",
+        "United Kingdom",
+        "Italy")
+    ) %>%
+  # 2. group data by year
+  group_by(year) %>%
+  # 3. add GER's count as new column *by year*
+  left_join(
+    # Germany only
+    filter(tot_pop,
+           Country %in% "Germany including former GDR"),
+    # join back in `by year`
+    by="year")
+merge_GER
+```
+ 
+Here you see that the merge (or join) operation labelled `col.x` and `col.y` if
+ both datasets contained a column called `col`. Now let's continue to compute what proportion of german population each country amounts to:
 
 
-* plot different vars
-* make proportions and plot
-* make growth rates and plot
-* plot different vars by country
+```{r}
+names(merge_GER)[1] <- "Country"
+merge_GER %>%
+  mutate(prop_GER = 100 * counts.x / counts.y) %>%
+  # 5. plot
+  ggplot(mapping = 
+           aes(x = year,
+               y = prop_GER,
+               color = Country,
+               group = Country)) + 
+  geom_line(size=1) + 
+  scale_y_continuous("percent of German population") + 
+  theme_bw()  # new theme for a change?
+```
+
 
 
 
